Fix dark mode text visibility in achievements gallery caption (#1102)
* Initial plan

* Remove dark mode color overrides from achievements caption to fix text visibility


* Fix dark mode text visibility for hover title in normal view


* Update package.json

---------

--- a/assets/styles/sections/achievements.scss
+++ b/assets/styles/sections/achievements.scss
@@ -135,7 +135,6 @@ html[data-theme='dark'] {
         background-color: get-dark-color('bg-secondary');
 
         .title {
-          color: get-dark-color('inverse-text-color');
           background-color: rgba(get-dark-color('bg-primary-inverse'), 0.7);
         }
       }
@@ -145,14 +144,6 @@ html[data-theme='dark'] {
       }
       .caption {
         background-color: rgba(get-dark-color('bg-primary-inverse'), 0.7);
-        color: get-dark-color('inverse-text-color');
-
-        h4 {
-          color: get-dark-color('inverse-text-color');
-        }
-        p {
-          color: get-dark-color('inverse-text-color');
-        }
       }
     }
   }
